<resources>
    <string name="app_name">Museum_Bentoel</string>
    <string name="card_one">Deskripsi</string>
    <string name="card_two">Fasilitas</string>
    <string name="alamat">Jalan Wiromargo 32 Klojen Malang</string>
    <string name="museum">Museum Bentoel</string>
    <string name="desc">Deskripsi</string>
    <string name="fac">Fasilitas</string>
    <string name="gambar">Gambar</string>
    <string name="opini">Opini</string>
    <string name="buka_maps">Buka Maps</string>
</resources>
